--- a/_posts/2024-02-02-prent.md
+++ b/_posts/2024-02-02-prent.md
@@ -1,9 +1,11 @@
 ---
 layout: post
 category: print
-title: "Publications/Preprents"
-date: 2023-02-02
-description: ""
+title: "Publications/Preprints"
+date: 2024-02-06
+description: "<u>Yuko Nakagi†</u>, Takuya Matsuyama†, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto*‡, Yu Takagi*‡<br />
+       <b><a href="https://www.biorxiv.org/content/10.1101/2024.02.06.579077v1">The Brain Tells a Story: Unveiling Distinct Representations of Semantic Content in Speech, Objects, and Stories in the Human Brain with Large Language Models</a></b><br />
+       <i>bioRxiv</i>, 2024<br /><br />"
 github_url: 
 img_url: 
 ---
