--- a/_posts/2024-02-02-prent.md
+++ b/_posts/2024-02-02-prent.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-category: print
+category: preprint
 title: "Publications/Preprints"
 date: 2024-02-06
 description: "<u>Yuko Nakagi†</u>, Takuya Matsuyama†, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto*‡, Yu Takagi*‡<br />
