--- a/_posts/2024-02-06-print.md
+++ b/_posts/2024-02-06-print.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-category: preprint
+category: print
 title: "Preprint"
 date: 2024-02-06
 description: "<u>Yuko Nakagi†</u>, Takuya Matsuyama†, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto*‡, Yu Takagi*‡<br />
