--- a/_posts/2023-08-01-conf.md
+++ b/_posts/2023-08-01-conf.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 category: conference
-title: "Conference (not peer reviewed)"
+title: 'Conference (not peer reviewed)'
 date: 2023-08-01
-description: "<u>Yuko Nakagi</u>, Shinji Nishimoto, Yu Takagi<br /><b>Spatial Representation in the Human Brain during Group Activity</b><br /><i>Neuro2023</i>, Sendai, Japan, August 2023<br />"
+description: '<u>Yuko Nakagi</u>, Shinji Nishimoto, Yu Takagi<br /><b>Spatial Representation in the Human Brain during Group Activity</b><br /><i>Neuro2023</i>, Sendai, Japan, August 2023<br />'
 github_url: 
 img_url: 
 ---
