--- a/_posts/2024-02-06-print.md
+++ b/_posts/2024-02-06-print.md
@@ -1,11 +1,9 @@
 ---
 layout: post
 category: print
-title: "Preprint"
+title: 'Preprint'
 date: 2024-02-06
-description: "<u>Yuko Nakagi†</u>, Takuya Matsuyama†, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto*‡, Yu Takagi*‡<br />
-       <b><a href="https://www.biorxiv.org/content/10.1101/2024.02.06.579077v1">The Brain Tells a Story: Unveiling Distinct Representations of Semantic Content in Speech, Objects, and Stories in the Human Brain with Large Language Models</a></b><br />
-       <i>bioRxiv</i>, 2024<br /><br />"
+description: '<u>Yuko Nakagi†</u>, Takuya Matsuyama†, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto*‡, Yu Takagi*‡<br /><b><a href="https://www.biorxiv.org/content/10.1101/2024.02.06.579077v1">The Brain Tells a Story: Unveiling Distinct Representations of Semantic Content in Speech, Objects, and Stories in the Human Brain with Large Language Models</a></b><br /><i>bioRxiv</i>, 2024<br /><br />'
 github_url: 
 img_url: 
 ---
