--- a/_posts/2024-05-29-conf.md
+++ b/_posts/2024-05-29-conf.md
@@ -3,7 +3,7 @@ layout: post
 category: conference
 title: 'Conference (not peer reviewed)'
 date: 2024-05-29
-description: '<u>Yuko Nakagi</u>, Takuya Matsuyama, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto, Yu Takagi<br /><b>Correspondence between human brain activity and the latent representations of Large Language Models during the semantic comprehension of speech, obejcts, and stories</b><br /><i>JSAI2024</i>, Hamamatsu, Japan, May 2024<br />'
+description: '<u>Yuko Nakagi</u>, Takuya Matsuyama, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto*‡, Yu Takagi*‡<br /><b>Correspondence between human brain activity and the latent representations of Large Language Models during the semantic comprehension of speech, obejcts, and stories</b><br /><i>JSAI2024</i>, Hamamatsu, Japan, May 2024<br />'
 github_url: 
 img_url: 
 ---
