--- a/_posts/2024-02-06-print.md
+++ b/_posts/2024-02-06-print.md
@@ -3,7 +3,7 @@ layout: post
 category: print
 title: 'Publication'
 date: 2024-02-06
-description: '<u>Yuko Nakagi†</u>, Takuya Matsuyama†, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto*‡, Yu Takagi*‡<br /><b><a href="https://www.biorxiv.org/content/10.1101/2024.02.06.579077v2">Unveiling Multi-level and Multi-modal Semantic Representations in the Human Brain using Large Language Models</a></b><br /><i>EMNLP</i>, 2024<br /><br />'
-github_url: 
+description: '<u>Yuko Nakagi†</u>, Takuya Matsuyama†, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto*‡, Yu Takagi*‡<br /><b><a href="https://aclanthology.org/2024.emnlp-main.1133/">Unveiling Multi-level and Multi-modal Semantic Representations in the Human Brain using Large Language Models</a></b><br /><a href="https://sites.google.com/view/llm-and-brain/%E3%83%9B%E3%83%BC%E3%83%A0">Project page</a><br /><i>EMNLP</i>, 2024<br /><br />'
+github_url: https://github.com/yu-takagi/drama2brain?tab=readme-ov-file
 img_url: 
 ---
