--- a/_posts/2024-05-29-conf.md
+++ b/_posts/2024-05-29-conf.md
@@ -3,7 +3,7 @@ layout: post
 category: conference
 title: 'Conference (not peer reviewed)'
 date: 2024-05-29
-description: '<u>Yuko Nakagi</u>, Takuya Matsuyama, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto, Yu Takagi<br /><b><a href="https://www.jstage.jst.go.jp/article/pjsai/JSAI2024/0/JSAI2024_2K6OS20b01/_article/-char/en">Correspondence between human brain activity and the latent representations of Large Language Models during the semantic comprehension of speech, obejcts, and stories</a></b><br /><i>JSAI2024</i>, Hamamatsu, Japan, May 2024<br />'
+description: '<u>Yuko Nakagi</u>, Takuya Matsuyama, Naoko Koide-Majima, Hiroto Yamaguchi, Rieko Kubo, Shinji Nishimoto, Yu Takagi<br /><u><b><a href="https://www.jstage.jst.go.jp/article/pjsai/JSAI2024/0/JSAI2024_2K6OS20b01/_article/-char/en">Correspondence between human brain activity and the latent representations of Large Language Models during the semantic comprehension of speech, obejcts, and stories</a></b></u><br /><i>JSAI2024</i>, Hamamatsu, Japan, May 2024<br />'
 github_url: 
 img_url: 
 ---
