--- a/_posts/2025-02-28-print.md
+++ b/_posts/2025-02-28-print.md
@@ -3,7 +3,7 @@ layout: post
 category: print
 title: 'Preprint'
 date: 2025-02-28
-description: '<u>Yuko Nakagi†§</u>, Keigo Tada†, Sota Yoshino†, Shinji Nishimoto*‡, Yu Takagi*‡<br /><b><a href="https://www.arxiv.org/abs/2502.20779">Triple Phase Transitions: Understanding the Learning Dynamics of Large Language Models from a Neuroscience Perspective</a></b><br /><i>arXiv</i>, 2025<br /><br />'
+description: '<u>Yuko Nakagi†§</u>, Keigo Tada†, Sota Yoshino†, Shinji Nishimoto*‡, Yu Takagi*‡<br /><u><b><a href="https://www.arxiv.org/abs/2502.20779">Triple Phase Transitions: Understanding the Learning Dynamics of Large Language Models from a Neuroscience Perspective</a></b></u><br /><i>arXiv</i>, 2025<br />'
 github_url: 
 img_url: 
 ---
