--- a/_posts/2025-03-13-conf.md
+++ b/_posts/2025-03-13-conf.md
@@ -3,7 +3,7 @@ layout: post
 category: conference
 title: 'Conference (not peer reviewed)'
 date: 2025-03-13
-description: '<u>Yuko Nakagi†§</u>, Keigo Tada†, Sota Yoshino†, Shinji Nishimoto*‡, Yu Takagi*‡<br /><b><a href="https://www.anlp.jp/proceedings/annual_meeting/2025/pdf_dir/E10-5.pdf">Triple-Phase Transition: 脳との関係から捉える大規模言語モデルの学習ダイナミクス</a></b><br /><i>NLP2025</i>, Nagasaki, Japan, March 2025<br />'
+description: '<u>Yuko Nakagi†§</u>, Keigo Tada†, Sota Yoshino†, Shinji Nishimoto*‡, Yu Takagi*‡<br /><u><b><a href="https://www.anlp.jp/proceedings/annual_meeting/2025/pdf_dir/E10-5.pdf">Triple-Phase Transition: 脳との関係から捉える大規模言語モデルの学習ダイナミクス</a></b></u><br /><i>NLP2025</i>, Nagasaki, Japan, March 2025<br />'
 github_url: 
 img_url: 
 ---
